# RAGs

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/eval/: dataset.py  judge.py  run_eval.py
backend/app/ingestion/: asr.py  build_graph.py  chunker.py  index_vectors.py  models.py  normalize.py  pipeline.py  rss.py  status.py
backend/app/rag/: base.py  registry.py  suggest.py
backend/app/rag/agentic/: llm.py  strategy.py  toolbox.py
backend/app/rag/corrective/: strategy.py
backend/app/rag/echo/: strategy.py
backend/app/rag/graph/: extract.py  strategy.py
backend/app/rag/hybrid_rerank/: strategy.py
backend/app/retrieval/: embedder.py  graph_store.py  keyword.py  reranker.py  vector_store.py
backend/scripts/: daily_update.sh  demo_search.py  eval_retrieval.py  run_example.py  suggest_demo.py  to_traditional.py  update_corpus.py
backend/tests/: test_agentic.py  test_contract.py  test_corrective.py  test_eval.py  test_fallback.py  test_gemini.py  test_graph.py  test_groq.py  test_hardening.py  test_hybrid_rerank.py  test_ingestion.py  test_status.py  test_suggest.py
deploy/: com.gooaye.corpus-update.plist
docs/: EVALUATION.md  SYSTEM.md
eval/: golden.jsonl  golden.yaml
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
space/: README.md  app.py  main.py  prepare_space.sh  requirements.txt
